# Debloating_engine

./: .gitignore  Makefile  README.md  analysis.ml  analysis.mli  dune  dune-project  options.ml  options.mli  register.ml  register.mli  values.ml  values.mli
docker/: Dockerfile  mkdocker.sh  requirements.txt  secopera-configuration.md
tests/: ptests_config
tests/basic/: dead_block.c  dead_inner_block.c  test_config
tests/basic/oracle/: dead_block.res.oracle  dead_inner_block.res.oracle  dune
tests/chisel-bench/: test_config
tests/chisel-bench/oracle/: bzip2-1.0.5.c.origin.res.oracle
